fix: se ajusta la salida de las respuestas, de acuerdo al refactor
