# controllers/solicitudes_ordenador.go
@@ -60,7 +60,8 @@ func (c *SolicitudesOrdenadorController) GetSolicitudesOrdenador() {
 	}
 	//var v []models.PagoContratistaCdpRp
 	if pagos_personas_proyecto, err := helpers.SolicitudesOrdenador(doc_ordenador, limit, offset); err == nil {
-		c.Data["json"] = pagos_personas_proyecto
+		c.Ctx.Output.SetStatus(200)
+		c.Data["json"] = map[string]interface{}{"Success": true, "Status": "200", "Message": "Successful", "Data": pagos_personas_proyecto}
 	} else {
 		panic(err)
 	}
@@ -100,7 +101,8 @@ func (c *SolicitudesOrdenadorController) ObtenerDependenciaOrdenador() {
 	}
 
 	if dependenciaId, err := helpers.DependenciaOrdenador(doc_ordenador); err == nil {
-		c.Data["json"] = dependenciaId
+		c.Ctx.Output.SetStatus(200)
+		c.Data["json"] = map[string]interface{}{"Success": true, "Status": "200", "Message": "Successful", "Data": dependenciaId}
 	} else {
 		panic(err)
 	}
@@ -114,7 +116,7 @@ func (c *SolicitudesOrdenadorController) ObtenerDependenciaOrdenador() {
 // @Description ObtenerInfoOrdenador trae la informacion de un ordenador del gasto a partir de su numero de contrato y ano de vigencia
 // @Param numero_contrato path string true "Numero de contrato en la tabla contrato general"
 // @Param vigencia path int true "Vigencia del contrato en la tabla contrato general"
-// @Success 201 {int} models.InformacionOrdenador
+// @Success 200 {int} models.InformacionOrdenador
 // @Failure 403 :numero_contrato is empty
 // @Failure 403 :vigencia is empty
 // @router /informacion_ordenador/:numero_contrato/:vigencia [get]
@@ -143,7 +145,8 @@ func (c *SolicitudesOrdenadorController) ObtenerInfoOrdenador() {
 	}
 
 	if informacion_ordenador, err := helpers.TraerInfoOrdenador(numero_contrato, vigencia); err == nil {
-		c.Data["json"] = informacion_ordenador
+		c.Ctx.Output.SetStatus(200)
+		c.Data["json"] = map[string]interface{}{"Success": true, "Status": "200", "Message": "Successful", "Data": informacion_ordenador}
 	} else {
 		panic(err)
 	}
